# retail-rag

./: .tool-versions  README.md  docker-compose.yaml
api/: main.py  pyproject.toml
api/config/: __init__.py  config.py
api/docker/: Dockerfile
api/endpoints/: __init__.py  data_queries.py  semantic_search.py
api/model/: __init__.py
data/docker/: Dockerfile  Dockerfile.vector_store
data/embeddings/: config.py  generate_embeddings.py  pyproject.toml  vector_store.py
data/generation/: config.py  data_ingestion.py  pyproject.toml
data/sql/: init.sql
